# cyrus-cybernetic

./: .dockerignore  .env.example  .gitignore  .replit  ADVANCED_INTELLIGENCE_README.md  Attached Element Context from Integrated  CYRUS.spec  CYRUS_PRODUCTION_DEPLOYMENT_COMPLETE.md  DEPLOYMENT_ACTIVE.md  DEPLOYMENT_VERIFICATION.md  DOCUMENTS_MODULE_README.md  Dockerfile  Dockerfile.prod  ENHANCED_COMMUNICATION_README.md  GITHUB_LAUNCH_SUMMARY.md  Makefile  OPERATIONAL_VERIFICATION_REPORT.md  PERMANENT_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_PUBLISHED.md  README.md  REPLIT_README.md  SUPER_INTELLIGENCE_README.md  SYSTEM_DEPLOYED.md  SYSTEM_LOADING_FIX_REPORT.md  TRAINING_EXECUTION_SUMMARY.md  WORKSPACE_BACKUP_STATUS.md  [warning] [WakeWord] Listening stopped  advanced_robotics_design_generator.py  advanced_robotics_image_generator.py  backup.json  build_desktop_app.py  check-github-repo.sh  constitution_of_botswana.txt  create-db.js  create-db.mjs  create-deployment-package.sh  cyrus.code-workspace  cyrus_access_generator.py  cyrus_advanced_demo.py  cyrus_advanced_super_intelligence_demo.py  (+123 more)
.azure/: README.md  azure.yaml  plan.md
.azure/infra/: main.bicep  (+1 more)
.github/: copilot-instructions.md
Cyrus-cybernetic/: README.md
Quantum_Intelligence_Nexus_v2.0/: .gitignore  INSTALL.md  __init__.py  quantum_intelligence_nexus.py  requirements.txt  setup.py
checkpoints/: best_checkpoint_epoch_1.pt  best_checkpoint_epoch_2.pt  best_checkpoint_epoch_3.pt  checkpoint_epoch_10.pt  checkpoint_epoch_100.pt  checkpoint_epoch_15.pt  checkpoint_epoch_20.pt  checkpoint_epoch_25.pt  checkpoint_epoch_30.pt  checkpoint_epoch_35.pt  checkpoint_epoch_40.pt  checkpoint_epoch_45.pt  checkpoint_epoch_5.pt  checkpoint_epoch_50.pt  checkpoint_epoch_55.pt  checkpoint_epoch_60.pt  checkpoint_epoch_65.pt  checkpoint_epoch_70.pt  checkpoint_epoch_75.pt  checkpoint_epoch_80.pt  checkpoint_epoch_85.pt  checkpoint_epoch_90.pt  checkpoint_epoch_95.pt
core_algorithms/: __init__.py  advanced_vision_module.py
cyrus-ai/: api.py  autonomy.py  brain.py  learning_engine.py  memory_service.py  planner.py  requirements.txt  run_server.sh  start.sh
cyrus-core/: server.ts
cyrus-deployment-20260303-142756/: .env.example  .env.production  README.md  package-lock.json
cyrus-deployment-20260322-075109/: package-lock.json  package.json  vite.config.js
cyrus-ui/: package.json
cyrus_ai/: README.md  __init__.py  app.py  requirements.txt
cyrus_core/: core.py  memory.py  response.py  run.py
cyrus_replit_upload/: simple_flask_server.py
deployment_results/: cyrus_deployment_1773954828.json  cyrus_deployment_1773955843.json  cyrus_deployment_1773956167.json  cyrus_deployment_1773956273.json  cyrus_deployment_1773956388.json  cyrus_deployment_1773958103.json
deployment_summary/: CYRUS_DEPLOYMENT_SUMMARY.md
docs/: index.html
drizzle/: 0000_production_hardening.sql  0000_youthful_masque.sql
examples/: example_basic_usage.py
generated_robotics_content/: precision_robotics_content_report_20260303_125037.json  robotics_content_report_20260303_124034.json  robotics_content_report_20260303_124051.json  robotics_content_report_20260303_124139.json
generated_robotics_designs/: robotic_arm_20260303_125017_bom.json  robotic_arm_20260303_125036_bom.json  robotic_arm_documentation_20260303_124034.json  robotic_arm_documentation_20260303_124050.json  sensor_system_design_package_20260303_124140.json  sensor_system_documentation_20260303_124051.json  system_architecture_documentation_20260303_124051.json  system_architecture_documentation_20260303_124139.json  technical_diagram_documentation_20260303_124139.json
generation_cache/: cache_index.json  cache_robotic_arm_20260303_124139.json  cache_sensor_system_20260303_124051.json  cache_system_architecture_20260303_124051.json  cache_system_architecture_20260303_124139.json
health_monitoring_results/: cyrus_health_monitoring_20260309_005925.json
infra/: README.md  main.bicep  main.parameters.json
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  service.yaml
optimization_results/: cyrus_optimization_1772875691.json
original-cyrus-ui-extracted/: EXTRACTION_NOTES.md  tsconfig.json  vite.config.ts
public/: index.html  index.html.bak.20260408_031940
reports/: system-audit-2026-04-09.json
runtime-data/: display_graphics_collection.json
script/: install-launch-agent.sh  start-production.sh  sync-production-bundle.sh
scripts/: bootstrap.sh  entrypoint.prod.sh  example_autonomous_evolution.py  example_autonomous_learning.py  health-check.sh  interactive_model_interaction.py  retrain_5003.sh  start-clean.sh  test_all_modules.sh
server/: brain-core.ts  cluster.ts  db.ts  index.ts  logger.ts  openai-plugin.ts  routes.ts  static.ts  storage.ts  vite.ts
shared/: schema.ts
standalone/: .dockerignore  .env.example  Dockerfile  SETUP.md  auth-adapter.ts  docker-compose.yml  install.sh  start.sh
support_documentation/: README.md  cyrus_production_support.json
tests/: __init__.py  test_v2_features.py
training_cache/: trained_models.pkl  training_state.json
uat_results/: cyrus_uat_feedback_20260307_114023.json  cyrus_uat_report_20260309_010355.json  cyrus_uat_report_20260319_233033.json
verification_results/: cyrus_verification_1772875481.json  cyrus_verification_1773955932.json
zip_combined_ui/: .replit  package-lock.json  package.json  replit.md
(+20768 files in other folders)
